# 343-Bragging-Rights

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: ktest.hpp  main.cpp  tests.cpp
